@@ -58,6 +58,9 @@ Release 2.8.0 - UNRELEASED
     
     MAPREDUCE-6635. Unsafe long to int conversion in UncompressedSplitLineReader
     and IndexOutOfBoundsException. (Junping Du via vvasudev)
+    
+    MAPREDUCE-6405. NullPointerException in App Attempts page.
+    (Siqi Li and Gera Shegalov via devaraj)
 
 Release 2.7.3 - UNRELEASED
  
